# rocket_league_score

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_start_command.sh
.sqlx/: query-00a51151f9b39ae209c5e7853b0da26767d9f40dce662ee455122c4aa8e9668e.json  query-012605bbad4c04dedcaafd02080acfbf353b9e2a34ceed3dd4345146838adf88.json  query-038306dcbe79eeea0d031498b2168a48ff19e8165c4f9e40fdd28313c583ac00.json  query-05960c776ec7027353e081a22126f7369b5193e3cd0c1d571bfcfed4826e77dc.json  query-07d47de232957689ab9e33105ceb6c7af7dbfe56b500a645f87f9991efaa3fc7.json  query-0fde84b4b5eb793f25f9c55c92f114ac35babca38d571879c9d15835b6915095.json  query-1368b0695dd0cf2dcde32d181bb61a0587cd56796932ae100c61559f28381fbc.json  query-176e2c271766f6196e8368a78742ff2d91f6f81fe4678de918774a1cb404888f.json  query-1cfb36e6066c25db439d5b7a25fe3bb0191c3ad26d770689f31e3b2d31ba2ea7.json  query-1eb99606320f4bd151bdf79a333987a527ed45b222860eb4b9a84470ccb3d039.json  query-1fc8a4d562eade00692d52a19e72ea413674559faa9b38ff0665b4f5122b9508.json  query-21505fe44d9b487e14377a30fdfbb23af10cab5608e3f80b03029a05aab6eeac.json  query-217ccb9170ee1cb9e1eb09e0049dfe6c2efd468044eb513d9b0a9b638822d28d.json  query-221462396e6a38beadd05f353b5de7190aa3ffb9627d536456336d1bb5b35663.json  query-23f0d12ec1d3b31e5514b870a84b7727b319d2499ebf995dff3ef13383b747ae.json  query-25d1e11b9eaca427be2f9c395ccd3b1e49410dc3a99de6c1b35778629bd22cab.json  query-26f194e0d7364123b900ecdb938d832eede5f1abc791ed8b6511ff08654e6b25.json  query-290c24d04ddfde1f98ad1f726c28159fb77de960a19e7d1f75148d5e9a1d1bd0.json  query-2c8f55669e3340c9af85c7f1399db69c26df90861bda765dbd9df02749c1d5dc.json  query-2d9ab91f3113bde15b9e3587f38f6a927adcf03c9741a2fe5d8606626a5a8c11.json  query-37c82206baa7cf83bb4f1bf8a16bd10b0e0fbb0c0b8ac0ca43a382d95b156614.json  query-3bdcf77c4f443eab96246dd73dd46eb0d594f53f533fdcb3072858046e8b8be2.json  query-3c011831534988410aee0d01926d1d13213c92c22ba2b4007eeda631ba59257f.json  query-3eee0e56a1357c86f23c13af7e97e99930bef98191c4f6fdfecd2d50d999cce7.json  query-40b41c9ae1cd16c1b5ccc27692941b15885f5e9c538d9fa35c307f23b122d0ea.json  query-461170dc16082066dbed4d64017396232fb3e4ed023afbe37b27d77caa696778.json  query-4b004bd7f06aa46da0b56697530eb95e5301fbed56fcbb53539c348430e820a5.json  query-54297a1efbe37d4c25ff7698564fb7c3739906feb247690f6a597eb0a6210788.json  query-5af95d6b78a33cd60902df1cd2827a78618b853c0442086c8bf823de3da710b6.json  query-6848c09d0d88c2e6e88630028280d38556cf8fc89691a8aef88648b40f1f0ebc.json  query-6ea7f596dd3fdd9bdcfbe22e6ca3ad0aa0a3ef4374b3bb36010d77f0f2a76a2c.json  query-71094ff0aea06c54a81cdaad4ec64b511fe683446a2516c39f3163d38b5f6cb5.json  query-731f27b8d2e028da1952eb6c495d6a72bad840e376cc1e7bf11933d9fbc4a7df.json  query-73a60a89d83dbae2c33c46a4a5a8ef19caccb71fc3dbe6583dfea0a943159f0e.json  query-74a241f9eb683b02ee4585ce34fb1384b4619106a40fe975970e99cf66fb29f0.json  query-7b9af3d6a6213fc6cb79774f207e4a56e57a228c4ddd1722afb8928a0d356322.json  query-8378a201ac9b964bc736113405b0a2c3ffe3d7743473792d486c6aa41a439ba8.json  query-87b1ae78d887e464693e7e1186e5274d575cec325cb3a8f8961182c341d21b7f.json  query-9173009fb5f44219fef598a4bbe2532115fc411845e1527758de2b735ac615c0.json  query-9271800d0d8b85c7e749da2aa2b9900ef73f0fe5b311431587ab3ef0497202c4.json  (+32 more)
crates/ballchasing_downloader/: Cargo.toml
crates/ballchasing_downloader/src/: bundle.rs  config.rs  downloader.rs  lib.rs  main.rs  players.rs
crates/ballchasing_downloader/src/api/: client.rs  mod.rs  models.rs
crates/database/: Cargo.toml
crates/database/migrations/: 20241220000000_init.sql  20241221000000_init.sql  20241221000000_replays_and_models.sql  20241222000000_ballchasing_replays.sql  20241229000001_add_dataset_split.sql  20260330000001_add_grand_champion_rank_enum_values.sql  20260330000002_migrate_grand_champion_replays.sql  20260409000001_add_rank_known_to_replay_players.sql  20260419000001_add_smurf_score_to_replay_players.sql
crates/database/src/: ballchasing_replay.rs  lib.rs  model.rs  models.rs  path_utils.rs  replay.rs  replay_player.rs  repositories.rs
crates/feature_extractor/: Cargo.toml  FEATURES.md
crates/feature_extractor/src/: lib.rs
crates/ml_model/: Cargo.toml  MLModel.md
crates/ml_model/src/: dataset.rs  lazy_dataset.rs  lib.rs  segment_cache.rs  training.rs
crates/ml_model/src/fused_lstm/: backend.rs  cube_kernel.rs  mod.rs  module.rs
crates/ml_model_training/: Cargo.toml
crates/ml_model_training/src/: checkpoint.rs  dataset.rs  lib.rs  minibatch_loss.rs  segment_cache.rs  tch_model.rs  training.rs
crates/replay_parser/: Cargo.toml
crates/replay_parser/data/: 000f8951-ae9e-419a-8fed-0a22af68cabd.replay
crates/replay_parser/src/: lib.rs  match_validation.rs
crates/replay_structs/: Cargo.toml
crates/replay_structs/src/: ballchasing.rs  game_mode.rs  lib.rs  math.rs  model.rs  rank.rs  replay.rs  team.rs  unsupported_match.rs
crates/rocket_league_score/: Cargo.toml
crates/rocket_league_score/examples/: gen_overfit_segments.rs  ingest.rs  migrate.rs  pipeline.rs  predict.rs  test_pipeline.rs  train.rs  verify_downloaded_replays.rs
crates/rocket_league_score/src/: lib.rs  main.rs  rank.rs  validate_ballchasing_player_counts.rs  verify_downloaded_replays.rs
crates/rocket_league_score/src/commands/: device.rs  flag_smurfs.rs  full_pipeline.rs  full_train.rs  ingest.rs  mod.rs  pipeline.rs  predict.rs  test_pipeline.rs  train.rs  validate_ballchasing_player_counts.rs
crates/web_predictor/: Cargo.toml  Dioxus.toml  package.json
crates/web_predictor/assets/: tailwind.css
crates/web_predictor/assets/ranks/: src.txt
crates/web_predictor/src/: app_state.rs  browser_async.rs  embedded_model.rs  main.rs  prediction.rs
crates/web_predictor/src/ui/: processing.rs  results.rs  upload.rs
data/: v5.config.json  v5.mpk  v6.config.json  v6.mpk
docs/: experiment.md  overfit_wgpu.md
scripts/: database-dump.sh  restore-database.sh
(+28 files in other folders)
