[package]
name = "ballchasing_downloader"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "bundle_importer"
path = "src/bin/bundle_importer.rs"

[lints]
workspace = true

[dependencies]
# Internal dependencies
bytes.workspace = true
chrono.workspace = true
config.workspace = true
database.workspace = true
replay_structs.workspace = true

# External dependencies
anyhow.workspace = true
thiserror.workspace = true
governor.workspace = true
object_store.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
