[package]
name = "feature_extractor"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
replay_parser.workspace = true
replay_structs.workspace = true

anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true
