[package]
name = "ml_model"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
getrandom.workspace = true
feature_extractor.workspace = true
replay_structs.workspace = true

anyhow.workspace = true
burn.workspace = true
serde_json.workspace = true
tracing.workspace = true
