[package]
name = "ml_model"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
getrandom.workspace = true
feature_extractor.workspace = true
replay_structs.workspace = true

anyhow.workspace = true
burn.workspace = true
serde_json.workspace = true
tracing.workspace = true

# CubeCL GPU deps — compiled for every non-WASM target (training + server
# inference). The WASM build (is_this_a_smurf) gets only NdArray, which is
# already in the workspace `burn` dep.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
burn-cubecl = { version = "0.20.1" }
burn-wgpu = { version = "0.20.1", default-features = false }
cubecl = { version = "0.9.0", default-features = false }

[features]
default = []
