[package]
name = "ml_model_training"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "convert_model_to_bin"
path = "src/bin/convert_model_to_bin.rs"

[[bin]]
name = "overfit_test"
path = "src/bin/overfit_test.rs"

[lints]
workspace = true

[dependencies]
ml_model = { path = "../ml_model", default-features = false }
feature_extractor = { path = "../feature_extractor" }
replay_structs = { path = "../replay_structs" }
# Training is now done via tch (LibTorch / cuDNN-fused LSTM).
# Burn is kept only for data batching (NdArray CPU) and checkpoint serialisation.
burn = { workspace = true, features = ["train"] }
tch.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytemuck.workspace = true
rayon.workspace = true
uuid.workspace = true
