[package]
name = "ml_model_training"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "convert_model_to_bin"
path = "src/bin/convert_model_to_bin.rs"

[[bin]]
name = "overfit_wgpu"
path = "src/bin/overfit_wgpu.rs"

[[bin]]
name = "mixed_rank_eval"
path = "src/bin/mixed_rank_eval.rs"

[lints]
workspace = true

[dependencies]
ml_model = { path = "../ml_model" }
feature_extractor = { path = "../feature_extractor" }
replay_structs = { path = "../replay_structs" }
burn = { workspace = true, features = ["train", "wgpu", "autotune"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytemuck.workspace = true
rayon.workspace = true
uuid.workspace = true
