[package]
name = "replay_parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
boxcars.workspace = true
replay_structs.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tracing-subscriber.workspace = true
feature_extractor.workspace = true
tokio.workspace = true
uuid.workspace = true
