[package]
name = "replay_structs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
sqlx.workspace = true
uuid.workspace = true
