[package]
name = "rocket_league_score"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Internal dependencies
config.workspace = true
database.workspace = true
feature_extractor.workspace = true
ml_model.workspace = true
replay_parser.workspace = true
replay_structs.workspace = true

# External dependencies
anyhow.workspace = true
dotenvy.workspace = true
burn.workspace = true
clap.workspace = true
csv.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
